# usdFBX

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: FindFBX.cmake  FindUSD.cmake
src/: CMakeLists.txt  DebugCodes.cpp  DebugCodes.h  Error.cpp  Error.h  FbxNodeReader.cpp  FbxNodeReader.h  Helpers.h  PrecompiledHeader.cpp  PrecompiledHeader.h  Tokens.cpp  Tokens.h  UsdFbxAbstractData.cpp  UsdFbxAbstractData.h  UsdFbxDataReader.cpp  UsdFbxDataReader.h  UsdFbxFileformat.cpp  UsdFbxFileformat.h  plugInfo.json
tests/: FbxCommon.py  conftest.py  helpers.py  test_animation.py  test_camera.py  test_diagnostics.py  test_generic.py  test_hierarchies.py  test_imageable.py  test_loading.py  test_materials.py  test_metrics.py  test_plugin.py  test_polygon_mesh.py  test_skeleton.py  test_transforms.py
tests/data/: __init__.py  primitives.py  scenebuilder.py
